Fix comment text overflow on small screens (#5679)
* Work for #5671: fix comment text overflow on small screens

* Add markup tests

* Work for #5671: fix in vue

* Work for #5671: fix in knockout

* Work for #5671: fix in angular

* Add vrt test

* Add mask for vrt test

--- a/src/defaultV2-theme/blocks/sd-selectbase.scss
+++ b/src/defaultV2-theme/blocks/sd-selectbase.scss
@@ -46,16 +46,3 @@
 .sd-selectbase__column.sv-q-column-1 {
   width: 100%;
 }
-.sd-selectbase__other {
-  margin-top: calcSize(2);
-}
-.sd-selectbase__item {
-  .sd-selectbase__other {
-    margin-top: calcSize(3.5);
-  }
-}
-.sd-selectbase__item:last-child {
-  .sd-selectbase__other {
-    margin-bottom: calcSize(-2);
-  }
-}
